some test on no root screenshots (not working without root at the moment)